# ollama-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ollama-chat  ollama_chat.py  prompts.json  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: cheatsheet.md
ollama_cli/: __init__.py  app.py  chat_engine.py  cli.py  clipboard.py  commands.py  logging_utils.py  media.py  model_manager.py  models.py  security.py  session_store.py  storage.py  templates.py  ui_display.py  utils.py
tests/: conftest.py  test_chat_engine.py  test_integration_ollama.py  test_model_manager.py  test_registry.py  test_security.py  test_sessions.py  test_storage.py  test_ui_display.py  test_utils.py
